Fixed the spacing issues on the guest page

--- a/scss/elements/_banner.scss
+++ b/scss/elements/_banner.scss
@@ -84,14 +84,6 @@
   display: none;
 }
 
-.img-social a {
-  display: block;
-}
-
-.img-social a {
-  margin: 0 9px;
-}
-
 //.fiche-invites-liste-content div {
 //  width: 21.7391%;
 //  max-width: 150px;
